@@ -10,6 +10,7 @@ Licensed under the MIT license (see LICENSE file).
 
 BUGS
 
+There is probably a bug with updating overstuffed data objects or arrays.
 
 CRUD
 
@@ -38,9 +39,10 @@ DEBUGGING
 Trace mode for tracking where CRUD operations are called and filters are created.
 4. Production sensitive debug output, I.e. do not write debug output on production servers unless overridden.
 5. Context sensitive output: HTML for web servers, text for command line.
-1. Tally time for executing database queries. Per database and total. Grubby::$time, $database->time (done, but write a test for it)
 
 MISC
 
 All GrubbyTable info array items should be overridable. I.e. $table->database($other_db)
 Mapping data from one form to another.
+Multi-column primary keys probably don't work so well
+Also, notice that a primary key can never be reset! Maybe that's not a problem.
