@@ -48,6 +48,10 @@ class GrubbyDatabaseTest extends PHPUnit_Framework_TestCase {
     public function testExecute() {
         $database = $GLOBALS['database'];
         
+        $grubby_before = Grubby::$time;
+        $database_before = $database->time;
+        $start = microtime(true);
+        
         // create a temporary table foo
         $result = $database->execute('CREATE TEMPORARY TABLE foo (bar INT)');
         $this->assertType('GrubbyResult', $result);
@@ -65,6 +69,15 @@ class GrubbyDatabaseTest extends PHPUnit_Framework_TestCase {
             $read[] = $row['bar'];
         }
         $this->assertEquals($data, $read);
+        
+        $time = microtime(true) - $start;
+        $grubby_time = Grubby::$time - $grubby_before;
+        $database_time = $database->time - $database_before;
+        
+        $this->assertGreaterThan(0, $time);  // some database time should have been spent
+        $this->assertEquals($grubby_time, $database_time);  // one database, equal times
+        $this->assertLessThanOrEqual($time, $grubby_time);  // more total time than database time
+        $this->assertGreaterThan($time*.8, $grubby_time);  // most of time spent in database
     }
     
     /**
